Add verification for uploading and updating new surveys
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/resources/messages.properties
+++ b/resources/messages.properties
@@ -59,6 +59,7 @@ CertificationServlet.66=Invalid CSV column.  Expected {0}, found {1}
 CertificationServlet.7=Unknown server request: {0}
 CertificationServlet.8=Error updating specification version {0} language {1}.  Update for this file will be skipped.
 CertificationServlet.9=Unexpected survey response exception.  Please notify the OpenChain technical group that the following error has occurred: {0}
+CertificationServlet.70=Invalid specification version {0} language {1} due to {2}.  This file will be skipped.
 
 # Strings from the UserSession class.  Many strings are error messages.  Some of the error messages are commonly displayed
 UserSession.10=Unexpected Invalid Key exception completing verification.  Please report this error to the OpenChain team
@@ -138,3 +139,9 @@ SurveyQuestionUpdateStats.2list={0} and {1}.
 SurveyQuestionUpdateStats.start={0}, {1}
 SurveyQuestionUpdateStats.middle={0}, {1}
 SurveyQuestionUpdateStats.end={0}, and {1}.  
+# Messages for the Survey class
+Survey.1=Duplication section name {0}.
+Survey.2=Duplication question number {0}.
+Survey.3=Invalid sub-question {0}.  Number of questions({1}) is less than the minimum number of correct answers ({2}).
+Survey.4=Section name for question is not correct for question {0}.
+Survey.5=Sub question number {0} was not found in the main question list for the survey.
