Added Learn More link

--- a/WebContent/resources/locales/en/translation.json
+++ b/WebContent/resources/locales/en/translation.json
@@ -18,7 +18,7 @@
   "Getting Started_content_2": "Complete the questionnaire.",
   "Getting Started_content_3": "Keep a record of how you met the requirements.",
   "Learn More": "Learn More",
-  "Learn More_content": "",
+  "Learn More_content": "You can get more details about OpenChain Self-Certification <a class=\"anchor\" href=\"https://www.openchainproject.org/get-started/conformance" target=\"_blank\">here<\/a>.",
   "Printable Guide": "Printable Version",
   "offline-conformance-pdf": "You can get the self-certification questionnaire in a printable and sharable format. You can download that <a class=\"anchor\" id=\"dwnquestionnaire\" target=\"_blank\">here</a>",
   
