--- a/WebContent/resources/locales/ja/translation.json
+++ b/WebContent/resources/locales/ja/translation.json
@@ -18,7 +18,7 @@
   "Getting Started_content_2": "アンケートに答える。",
   "Getting Started_content_3": "要件をどのように満たしたかを記録する。",
   "Learn More": "さらに詳しく",
-  "Learn More_content": "",
+  "Learn More_content": "OpenChainの自己認証に関する詳細は<a class=\"anchor\" href=\"https://www.openchainproject.org/get-started/conformance" target=\"_blank\">こちら<\/a>。",
   "Printable Guide": "印刷版",
   "offline-conformance-pdf": "自己認証アンケートは印刷可能な形式および共有可能な形式でご利用できます。ダウンロードはここから<a href=\"https:\/\/openchain-project.github.io\/conformance-questionnaire\/questionnaire.pdf\"><\/a>可能です。",
   
