--- a/resources/messages_ja.properties
+++ b/resources/messages_ja.properties
@@ -3,7 +3,7 @@
 EmailUtility.24=OpenChain登録 [返信不要]
 EmailUtility.27=招待状の送信中に例外が発生しました。
 EmailUtility.4=メールシステムの地域名が設定されていません。このエラーの場合はOpenChainチームにご連絡ください。
-EmailUtility.48=<div>おめでとうございます {0}。認証リクエストが許可されました。OpenChain認証のリクエストを送信しなかった場合は、OpenChainグループ（openchain-conformance@lists.linuxfoundation.org.）までお知らせください。</div>
+EmailUtility.48=<div>おめでとうございます {0}。認証リクエストが許可されました。OpenChain認証のリクエストを送信しなかった場合は、OpenChainグループ（conformance@lists.openchainproject.org.）までお知らせください。</div>
 EmailUtility.52=OpenChain認証リクエストが許可されました [返信不要]
 EmailUtility.58=メールシステムの宛先が設定されていません。このエラーの場合はOpenChainチームにご連絡ください。
 EmailUtility.62=ユーザメールの送信中に例外が発生しました。
