--- a/resources/messages_ko.properties
+++ b/resources/messages_ko.properties
@@ -3,7 +3,7 @@
 EmailUtility.24=OpenChain 등록 [do not reply]
 EmailUtility.27=초대 이메일을 보내는 중에 예외가 발생했습니다.
 EmailUtility.4=이메일 기능의 지역 이름이 설정되지 않았습니다. 이 오류로 OpenChain 팀에 문의하십시오.
-EmailUtility.48=<div>축하합니다 {0}. 인증 요청이 승인되었습니다. OpenChain 인증 요청을 제출하지 않은 경우 OpenChain 그룹에 openchain-conformance@lists.linuxfoundation.org로 알려주십시오.</div>
+EmailUtility.48=<div>축하합니다 {0}. 인증 요청이 승인되었습니다. OpenChain 인증 요청을 제출하지 않은 경우 OpenChain 그룹에 conformance@lists.openchainproject.org로 알려주십시오.</div>
 EmailUtility.52=OpenChain 인증 요청이 수락되었습니다 [do not reply]
 EmailUtility.58=이메일 기능에 대한 'to email'이 설정되지 않았습니다. 이 오류로 OpenChain 팀에 문의하십시오.
 EmailUtility.62=사용자 이메일을 이메일로 보내는 중 예외가 발생했습니다
