--- a/WebContent/resources/locales/ja/translation.json
+++ b/WebContent/resources/locales/ja/translation.json
@@ -51,7 +51,7 @@
 
   "COMMENT_3": "\/****************************** TRANSLATIONS FOR FOOTER PAGE IS GIVEN BELOW************************************\/",
 
-  "Please contact":"エラーや問題がある場合は<a class=\"anchor\" href=\"mailto:openchain-conformance@lists.linuxfoundation.org?Subject=OpenChain%20Certification%20Feedback\" target=\"_blank\">OpenChain サポート<\/a>に連絡してください。",
+  "Please contact":"エラーや問題がある場合は<a class=\"anchor\" href=\"mailto:conformance@lists.openchainproject.org?Subject=OpenChain%20Certification%20Feedback\" target=\"_blank\">OpenChain サポート<\/a>に連絡してください。",
   "footer_content":"Copyright 2018 The Linux Foundation. 無断複写・転載を禁じます。Linux Foundation は登録商標を持ち、商標を使用します。Linux Foundationの登録商標リストについては、<a class=\"anchor\" href=\"https:\/\/www.linuxfoundation.org\/trademark-usage\" target=\"_blank\">登録商標の使用<\/a>のページをご覧ください。LinuxはLinus Torvaldsの登録商標です。<a class=\"anchor\" href=\"https:\/\/www.openchainproject.org\/privacy\">プライバシーポリシー<\/a>および<a class=\"anchor\" href=\"https:\/\/www.openchainproject.org\/terms\">利用規約<\/a>",
   
   "COMMENT_4": "\/********TRANSLATIONS FOR THE CONFIRMING PAGE IS GIVEN BELOW********* (Specification) ********************\/",
