--- a/resources/messages_ru.properties
+++ b/resources/messages_ru.properties
@@ -3,7 +3,7 @@
 EmailUtility.24=OpenChain Registration [do not reply]
 EmailUtility.27=Exception occurred during the emailing of the invitation
 EmailUtility.4=The region name for the email facility has not been set.  Please contact the OpenChain team with this error.
-EmailUtility.48=<div>Congratulations {0}.  Your certification request has been accepted.  If you did not submit a request for OpenChain certification, please notify the OpenChain group at openchain-conformance@lists.linuxfoundation.org.</div>
+EmailUtility.48=<div>Congratulations {0}.  Your certification request has been accepted.  If you did not submit a request for OpenChain certification, please notify the OpenChain group at conformance@lists.openchainproject.org.</div>
 EmailUtility.52=OpenChain certification request has been accepted [do not reply]
 EmailUtility.58=The to email for the email facility has not been set.  Please contact the OpenChain team with this error.
 EmailUtility.62=Exception occurred during the emailing of a user email
