--- a/WebContent/resources/locales/en/translation.json
+++ b/WebContent/resources/locales/en/translation.json
@@ -166,7 +166,7 @@
   "Unsubmit":"Unsubmit",
   "Download Answers":"Download Answers",
   "Reset":"Reset Questionnaire",
-  "Select Version":"Select Version",
+  "Select Version":"Change Version",
   "select_version_content":" Select the specification version.",
   "Version":"Version",
   "reset_Questionnaire_content" : "This will delete all answers and start a new Questionnaire with the latest Questionnaire version.  Are you sure you want to continue?",
