Add untranslated text to the ja and ko translation files
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/resources/locales/ja/translation.json
+++ b/WebContent/resources/locales/ja/translation.json
@@ -161,6 +161,7 @@
 
   "Survey_title":"OpenChain自己認証アンケート",
   "Questionnaire Revision":"アンケート改訂",
+  "preamble":"We recommend having a look at the OpenChain Reference Training Slides and the OpenChain Reference Policy Template before undergoing Self-Certification. It will help frame the questions that follow.",
   "Save Answers":"回答を保存",
   "Save and Submit":"保存して送信",
   "Unsubmit":"未送信",
