--- a/WebContent/resources/locales/ko/translation.json
+++ b/WebContent/resources/locales/ko/translation.json
@@ -161,6 +161,7 @@
 
   "Survey_title":"OpenChain 자체 인증 질문지",
   "Questionnaire Revision":"질문지 Revision",
+  "preamble":"We recommend having a look at the OpenChain Reference Training Slides and the OpenChain Reference Policy Template before undergoing Self-Certification. It will help frame the questions that follow.",
   "Save Answers":"답변 저장",
   "Save and Submit":"저장 및 제출",
   "Unsubmit":"제출 취소",
