Add language code to all language translations
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/resources/locales/en/translation.json
+++ b/WebContent/resources/locales/en/translation.json
@@ -38,11 +38,12 @@
 
   "English":"English (en)",
   "Russian": "Russian (ru)",
-  "Spanish":"Spanish",
-  "French":"French",
-  "German":"German",
-  "Japanese":"Japanese",
-  "Chinese":"Chinese",
+  "Spanish":"Spanish (es)",
+  "French":"French (fr)",
+  "German":"German (de)",
+  "Japanese":"Japanese (ja)",
+  "Chinese":"Chinese (zh)",
+  "Korean":"Korean (ko)",
   "Resend Verification" : "Resend Verification",
   "Error" : "Error",
   "error-msg" : "Sorry - there was a problem loading data:",
