--- a/WebContent/resources/locales/ja/translation.json
+++ b/WebContent/resources/locales/ja/translation.json
@@ -38,11 +38,12 @@
 
   "English":"英語 (en)",
   "Russian": "ロシア語 (ru)",
-  "Spanish":"スペイン語",
-  "French":"フランス語",
-  "German":"ドイツ語",
-  "Japanese":"日本語",
-  "Chinese":"中国語",
+  "Spanish":"スペイン語 (es)",
+  "French":"フランス語 (fr)",
+  "German":"ドイツ語 (de)",
+  "Japanese":"日本語 (ja)",
+  "Chinese":"中国語 (zh)",
+  "Korean":"韓国語 (ko)",
   "Resend Verification": "検証を再送信",
   "Error": "エラー",
   "error-msg": "データの読み込みに問題があります：",
