--- a/WebContent/resources/locales/ko/translation.json
+++ b/WebContent/resources/locales/ko/translation.json
@@ -38,11 +38,12 @@
 
   "English":"영어 (en)",
   "Russian": "러시아어 (ru)",
-  "Spanish":"스페인어",
-  "French":"프랑스어",
-  "German":"독일어",
-  "Japanese":"일본어",
-  "Chinese":"중국어",
+  "Spanish":"스페인어 (es)",
+  "French":"프랑스어 (fr)",
+  "German":"독일어 (de)",
+  "Japanese":"일본어 (ja)",
+  "Chinese":"중국어 (zh)",
+  "Korean":"한국어 (ko)",
   "Resend Verification" : "재전송 확인",
   "Error" : "에러",
   "error-msg" : "죄송합니다. 데이터를 로드하는 중에 문제가 발생했습니다:",
