--- a/WebContent/resources/locales/ru/translation.json
+++ b/WebContent/resources/locales/ru/translation.json
@@ -36,11 +36,12 @@
 
   "English":"английский (en)",
   "Russian": "русский (ru)",
-  "Spanish":"Spanish",
-  "French":"French",
-  "German":"German",
-  "Japanese":"Japanese",
-  "Chinese":"Chinese",
+  "Spanish":"Spanish (es)",
+  "French":"French (fr)",
+  "German":"German (de)",
+  "Japanese":"Japanese (ja)",
+  "Chinese":"Chinese (zh)",
+  "Korean":"Korean (ko)",
   "Resend Verification" : "Отправить подтверждение",
   "Error" : "ошибка",
   "error-msg" : "Извините - произошла ошибка при загрузке данных",
