Add untranslated messages
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/resources/messages_ru.properties
+++ b/resources/messages_ru.properties
@@ -103,8 +103,10 @@ Question.6=Invalid format for question number {0}.  Must be of the format N or N
 Question.8=Invalid format for question number {0}.  Must be of the format N or N.a or N.a.i
 QuestionJsonDeserializer.10=Unknown question type: {0}
 # Strings from SurveyUpdateResult class
+SurveyUpdateResult.0=Duplicate spec version and locale: {0}:{1}
 SurveyUpdateResult.1=Version: {0}; Language: {1} {2}
 SurveyUpdateResult.2=Version: {0}; Language: {1}
+SurveyUpdateResult.4=Questions do not match for all locales in spec version {0}
 # Test values - used for testing the I18N functionality NOTE: THESE SHOULD NOT BE TRANSLATED
 test.key1=default key1
 test.key2=This is a template test1 with "7"
