Update section titles when updating surveys
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/resources/messages.properties
+++ b/resources/messages.properties
@@ -26,6 +26,7 @@ YesNo.NoNotApplicable=no, but not applicable
 # Strings used in the Certification Servlet class.  Most of the messages are errors.  Errors from this class are more common
 CertificationServlet.1=Error accessing the Questionnaire GIT repository.  Please report this error to the OpenChain team.
 CertificationServlet.11=Unexpected SQL exception.  Please notify the OpenChain technical group that the following error has occurred: {0}
+CertificationServlet.12=Missing existing section titled {0} in spec version {1} locale {2}
 CertificationServlet.13=Unexpected data exception.  Please notify the OpenChain technical group that the following error has occurred: {0}
 CertificationServlet.14=An unexpected error occurred.  Please notify the OpenChain technical group that the following error has occurred: {0}
 CertificationServlet.17=Invalid request - missing request parameter
@@ -138,6 +139,7 @@ SurveyQuestionUpdateStats.4=Updated {0} question:
 SurveyQuestionUpdateStats.2=No Changes.
 SurveyQuestionUpdateStats.1list={0}.  
 SurveyQuestionUpdateStats.2list={0} and {1}.  
+SurveyQuestionUpdateStats.6=Updated {0} section titles: 
 SurveyQuestionUpdateStats.start={0}, {1}
 SurveyQuestionUpdateStats.middle={0}, {1}
 SurveyQuestionUpdateStats.end={0}, and {1}.  
