--- a/resources/messages_ja.properties
+++ b/resources/messages_ja.properties
@@ -26,6 +26,7 @@ YesNo.NoNotApplicable=いいえ、でも該当せず
 # Strings used in the Certification Servlet class.  Most of the messages are errors.  Errors from this class are more common
 CertificationServlet.1=GITリポジトリアンケートのアクセスエラーこのエラーをOpenChainチームに報告してください。
 CertificationServlet.11=予期しないSQL例外次のエラーの発生をOpenChainテクニカルチームに通知してください: {0}
+CertificationServlet.12=Missing existing section titled {0} in spec version {1} locale {2}
 CertificationServlet.13=予期しないデータ例外次のエラーの発生をOpenChainテクニカルチームに通知してください: {0}
 CertificationServlet.14=予期しないエラーが発生しました。次のエラーの発生をOpenChainテクニカルチームに通知してください: {0}
 CertificationServlet.17=無効なリクエスト - リクエストパラメータがありません。
@@ -138,6 +139,7 @@ SurveyQuestionUpdateStats.4=更新された{0}質問：
 SurveyQuestionUpdateStats.2=変更なし。
 SurveyQuestionUpdateStats.1list={0}.  
 SurveyQuestionUpdateStats.2list={0} および {1}  
+SurveyQuestionUpdateStats.6=Updated {0} section titles: 
 SurveyQuestionUpdateStats.start={0}, {1}
 SurveyQuestionUpdateStats.middle={0}, {1}
 SurveyQuestionUpdateStats.end={0}、および {1}  
