--- a/resources/messages_ko.properties
+++ b/resources/messages_ko.properties
@@ -26,6 +26,7 @@ YesNo.NoNotApplicable=아니오, 하지만 해당 사항 없음
 # Strings used in the Certification Servlet class.  Most of the messages are errors.  Errors from this class are more common
 CertificationServlet.1=Error accessing the Questionnaire GIT repository. 이 오류를 OpenChain 팀에 보고하십시오.
 CertificationServlet.11=Unexpected SQL exception.  다음 오류가 발생했음을 OpenChain 기술 그룹에 알려주십시오: {0}
+CertificationServlet.12=Missing existing section titled {0} in spec version {1} locale {2}
 CertificationServlet.13=Unexpected data exception.  다음 오류가 발생했음을 OpenChain 기술 그룹에 알려주십시오: {0}
 CertificationServlet.14=An unexpected error occurred.  다음 오류가 발생했음을 OpenChain 기술 그룹에 알려주십시오: {0}
 CertificationServlet.17=Invalid request - missing request parameter
@@ -138,6 +139,7 @@ SurveyQuestionUpdateStats.4=Updated {0} question:
 SurveyQuestionUpdateStats.2=No Changes.
 SurveyQuestionUpdateStats.1list={0}.  
 SurveyQuestionUpdateStats.2list={0} and {1}.  
+SurveyQuestionUpdateStats.6=Updated {0} section titles: 
 SurveyQuestionUpdateStats.start={0}, {1}
 SurveyQuestionUpdateStats.middle={0}, {1}
 SurveyQuestionUpdateStats.end={0}, and {1}.  
