Add language translations for the language terms for Simplified Chinese, Italian, Hebru, Hindi, Traditional Chinese
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/resources/locales/en/translation.json
+++ b/WebContent/resources/locales/en/translation.json
@@ -43,7 +43,12 @@
   "German":"German (de)",
   "Japanese":"Japanese (ja)",
   "Chinese":"Chinese (zh)",
+  "Simplified Chinese":"Simplified Chinese (zh-Hans)",
+  "Traditional Chinese":"Traditional Chinese (zh-Hant)",
   "Korean":"Korean (ko)",
+  "Italian":"Italian (it)",
+  "Hindi":"Hindi (hi)",
+  "Hebrew":"Hebrew (he)",
   "Resend Verification" : "Resend Verification",
   "Error" : "Error",
   "error-msg" : "Sorry - there was a problem loading data:",
