--- a/WebContent/resources/locales/ja/translation.json
+++ b/WebContent/resources/locales/ja/translation.json
@@ -43,7 +43,12 @@
   "German":"ドイツ語 (de)",
   "Japanese":"日本語 (ja)",
   "Chinese":"中国語 (zh)",
+  "Simplified Chinese":"簡体字 (zh-Hans)",
+  "Traditional Chinese":"繁体字 (zh-Hant)",
   "Korean":"韓国語 (ko)",
+  "Italian":"イタリア語 (it)",
+  "Hindi":"ヒンジ語 (hi)",
+  "Hebrew":"ヘブライ語 (he)",
   "Resend Verification": "検証を再送信",
   "Error": "エラー",
   "error-msg": "データの読み込みに問題があります：",
