--- a/WebContent/resources/locales/ko/translation.json
+++ b/WebContent/resources/locales/ko/translation.json
@@ -43,7 +43,12 @@
   "German":"독일어 (de)",
   "Japanese":"일본어 (ja)",
   "Chinese":"중국어 (zh)",
+  "Simplified Chinese":"간체 (zh-Hans)",
+  "Traditional Chinese":"번체 (zh-Hant)",
   "Korean":"한국어 (ko)",
+  "Italian":"이태리어 (it)",
+  "Hindi":"힌지어 (hi)",
+  "Hebrew":"히브리어 (he)",
   "Resend Verification" : "재전송 확인",
   "Error" : "에러",
   "error-msg" : "죄송합니다. 데이터를 로드하는 중에 문제가 발생했습니다:",
