Add functionality to change questionnaire language independent of the web app language
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/resources/locales/en/translation.json
+++ b/WebContent/resources/locales/en/translation.json
@@ -173,7 +173,9 @@
   "Download Answers":"Download Answers",
   "Reset":"Reset Questionnaire",
   "Select Version":"Change Version",
+  "Change Language":"Change Language",
   "select_version_content":" Select the specification version.",
+  "select_language_content":" Select the languge for the questionnaire.",
   "Version":"Version",
   "reset_Questionnaire_content" : "This will delete all answers and start a new Questionnaire with the latest Questionnaire version.  Are you sure you want to continue?",
   "Yes" : "Yes",
