--- a/WebContent/resources/locales/ja/translation.json
+++ b/WebContent/resources/locales/ja/translation.json
@@ -173,7 +173,9 @@
   "Download Answers":"回答をダウンロード",
   "Reset":"アンケートをリセット",
   "Select Version":"バージョンを選択",
+  "Change Language":"言語を変えてください",
   "select_version_content":" 仕様バージョンを選択",
+  "select_language_content":" アンケートの言語を選択してください。",
   "Version":"バージョン",
   "reset_Questionnaire_content": "これによりすべての回答が削除され、最新バージョンの新規アンケートが開始します。続けますか？",
   "Yes": "はい",
