--- a/WebContent/resources/locales/ko/translation.json
+++ b/WebContent/resources/locales/ko/translation.json
@@ -173,7 +173,9 @@
   "Download Answers":"답변 다운로드",
   "Reset":"질문지 초기화",
   "Select Version":"버전 선택",
+  "Change Language":"언어 변경",
   "select_version_content":"설명서 버전을 선택하십시오.",
+  "select_language_content":" 설문지의 언어를 선택하십시오.",
   "Version":"버전",
   "reset_Questionnaire_content" : "모든 답변을 삭제하고 새로운 질문지 버전으로 시작합니다. 계속하겠습니까?",
   "Yes" : "예",
