Update dialog localizations based on feedback from JC
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/resources/locales/ja/translation.json
+++ b/WebContent/resources/locales/ja/translation.json
@@ -173,7 +173,7 @@
   "Download Answers":"回答をダウンロード",
   "Reset":"アンケートをリセット",
   "Select Version":"バージョンを選択",
-  "Change Language":"言語を変えてください",
+  "Change Language":"言語の選択",
   "select_version_content":" 仕様バージョンを選択",
   "select_language_content":" アンケートの言語を選択してください。",
   "Version":"バージョン",
