--- a/WebContent/resources/locales/ko/translation.json
+++ b/WebContent/resources/locales/ko/translation.json
@@ -173,7 +173,7 @@
   "Download Answers":"답변 다운로드",
   "Reset":"질문지 초기화",
   "Select Version":"버전 선택",
-  "Change Language":"언어 변경",
+  "Change Language":"언어를 선택",
   "select_version_content":"설명서 버전을 선택하십시오.",
   "select_language_content":" 설문지의 언어를 선택하십시오.",
   "Version":"버전",
