Add a check for duplicate responses and fix links for translated PDF questionnaires
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/resources/locales/ja/translation.json
+++ b/WebContent/resources/locales/ja/translation.json
@@ -20,7 +20,7 @@
   "Learn More": "さらに詳しく",
   "Learn More_content": "OpenChainの自己認証に関する詳細は<a href=\"https:\/\/www.openchainproject.org\/get-started\/conformance\">こちら<\/a>。",
   "Printable Guide": "印刷版",
-  "offline-conformance-pdf": "自己認証アンケートは印刷可能な形式および共有可能な形式でご利用できます。ダウンロードはここから<a href=\"https:\/\/openchain-project.github.io\/conformance-questionnaire\/questionnaire.pdf\">可能です。<\/a>",
+  "offline-conformance-pdf": "自己認証アンケートは印刷可能な形式および共有可能な形式でご利用できます。ダウンロードはここから<a class=\"anchor\" id=\"dwnquestionnaire\" target=\"_blank\">可能です。<\/a>",
   
 
 
