update Korean for 2.1

--- a/WebContent/resources/locales/ko/translation.json
+++ b/WebContent/resources/locales/ko/translation.json
@@ -11,9 +11,9 @@
 
   "title": "OpenChain 자체 인증",
   "welcome": "환영합니다.",
-  "welcome_content": "OpenChain 설명서는 우수한 오픈 소스 컴플라이언스 프로그램의 주요 요건을 정의합니다. OpenChain 준수(Conformance)를 통해 조직은 이러한 요건을 충족함을 보여줄 수 있습니다. 이 온라인 질문지를 사용하여 무료 자체 인증을받을 수 있습니다. 또한 내부 점검시에도 이 질문지를 사용할 수 있습니다. 진행 상황과 결과는 제출할 때까지 비공개입니다.",
+  "welcome_content": "OpenChain 규격은 우수한 오픈 소스 컴플라이언스 프로그램의 주요 요건을 정의합니다. OpenChain 적합성을 통해 조직은 이러한 요건을 충족함을 보여줄 수 있습니다. 이 온라인 질문지를 사용하여 무료 자체 인증을받을 수 있습니다. 또한 내부 점검시에도 이 질문지를 사용할 수 있습니다. 진행 상황과 결과는 제출할 때까지 비공개입니다.",
   "Getting Started": "시작",
-  "Getting Started_content": "신청자는 OpenChain 설명서를 이해하고 있음과 OpenChain을 준수(Conformant)하기 위해서는 자체 인증을 완료해야 함을 확인합니다. 온라인 자체 인증을 위해서는 다음이 필요합니다.", 
+  "Getting Started_content": "신청자는 OpenChain 규격을 이해하고 있음과 OpenChain 적합성을 위해서는 자체 인증을 완료해야 함을 확인합니다. 온라인 자체 인증을 위해서는 다음이 필요합니다.", 
   "Getting Started_content_1": "가입하기",
   "Getting Started_content_2": "질문지를 작성하세요.",
   "Getting Started_content_3": "요건을 어떻게 충족했는지 기록하십시오.",
@@ -63,10 +63,10 @@
   "COMMENT_4": "/********TRANSLATIONS FOR THE CONFIRMING PAGE IS GIVEN BELOW********* (Specification) ********************/",
 
   "Conforming Organizations":"Conforming 조직",
-  "Conforming Organizations_content":"다음 조직은 <a class=\"anchor\" href=\"https://wiki.linuxfoundation.org/_media/openchain/openchainspec-current.pdf\" target=\"_blank\">OpenChain 설명서</a>에 대한 자체 인증 준수(Conformnace)를 획득했습니다. ",
+  "Conforming Organizations_content":"다음 조직은 <a class=\"anchor\" href=\"https://wiki.linuxfoundation.org/_media/openchain/openchainspec-current.pdf\" target=\"_blank\">OpenChain 규격</a>에 대한 적합성 자체 인증을 획득했습니다. ",
   "Organization":"조직",
-  "Specification" : "설명서.",
-  "Specification Version":"설명서 버전",
+  "Specification" : "규격.",
+  "Specification Version":"규격 버전",
   "Contact Email":"이메일 연락처",
   "Contact Name":"담당자 이름",
   "Not Available" : "사용 불가",
@@ -114,7 +114,7 @@
   "Re-enter Password":"비밀번호를 다시 입력하세요",
   "Organization Postal Address":"조직 우편 주소",
   "Sign Up":"가입",
-  "Sign Up_content_1":"내 이름과 이메일은 OpenChain 웹사이트의 준수(Conformance) 페이지에서 공유 될 수 있습니다",
+  "Sign Up_content_1":"내 이름과 이메일은 OpenChain 웹사이트의 적합성 페이지에서 공유 될 수 있습니다",
   "Sign Up_content_2":"나는 Linux Foundation의 <a class=\"anchor\" href=\"https://www.openchainproject.org/terms\" target=\"_blank\">Terms of Use</a>과 <a class=\"anchor\" href=\"https://www.openchainproject.org/privacy\">Privacy Policy</a>에 동의합니다.",
  
   "COMMENT_8": "/****************************** TRANSLATIONS FOR THE UPDATE PROFILE PAGE IS GIVEN BELOW*********(Username,Password,Name,Re-enter Password,Organization,Email,Organization Postal Address,Sign Up_content_1)***************************/",
@@ -130,7 +130,7 @@
   "Admin_title":"OpenChain 자체 인증 관리",
   "Site Status":"사이트 상태",
   "Site Software Version: ":"사이트 소프트웨어 버전: ",
-  "Edit Conformance Questions":"준수(Conformance) 질문 편집",
+  "Edit Conformance Questions":"적합성 질문 편집",
   "Git Tag" : "Git Tag",
   "Git Commit" : "Git Commit",
   "Update questionnaire" : "질문지 업데이트",
@@ -174,7 +174,7 @@
   "Reset":"질문지 초기화",
   "Select Version":"버전 선택",
   "Change Language":"언어를 선택",
-  "select_version_content":"설명서 버전을 선택하십시오.",
+  "select_version_content":"규격 버전을 선택하십시오.",
   "select_language_content":" 설문지의 언어를 선택하십시오.",
   "Version":"버전",
   "reset_Questionnaire_content" : "모든 답변을 삭제하고 새로운 질문지 버전으로 시작합니다. 계속하겠습니까?",
@@ -184,8 +184,8 @@
   "Responses Unsubmitted" : "제출되지 않은 응답",
   "submission-notice" : "감사합니다. 정보가 제출되었습니다",
   "confirm-submit-dialog" : "확인을 위해 '제출'을 클릭하세요.",
-  "confirm-submit-subdialog1" : "준수(Conformance) 자체 인증 질문지에 대한 당신의 답변은 정확하고 검증 가능합니다.",
-  "confirm-submit-subdialog2" : "당신의 답변은 OpenChain 설명서에 대한 당신의 준수를 반영합니다.",
+  "confirm-submit-subdialog1" : "적합성 자체 인증 질문지에 대한 당신의 답변은 정확하고 검증 가능합니다.",
+  "confirm-submit-subdialog2" : "당신의 답변은 OpenChain 규격에 대한 당신의 적합성을 반영합니다.",
 
   "Ok":"Ok",
   "Saved":"저장",
