Add localization strings
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/resources/messages.properties
+++ b/resources/messages.properties
@@ -61,6 +61,7 @@ CertificationServlet.7=Unknown server request: {0}
 CertificationServlet.8=Error updating specification version {0} language {1}.  Update for this file will be skipped.
 CertificationServlet.9=Unexpected survey response exception.  Please notify the OpenChain technical group that the following error has occurred: {0}
 CertificationServlet.70=Invalid specification version {0} language {1} due to {2}.  This file will be skipped.
+CertificationServlet.71=User verification faild.  Please check re-captha and submit.
 
 # Strings from the UserSession class.  Many strings are error messages.  Some of the error messages are commonly displayed
 UserSession.10=Unexpected Invalid Key exception completing verification.  Please report this error to the OpenChain team
@@ -75,6 +76,7 @@ UserSession.26=This use has not been verified.  Please check your email and clic
 UserSession.27=A password reset is in process.  Login is not allowed until the password has been reset.
 UserSession.3=User {0} not found.  Could not complete registration.
 UserSession.34=User {0} already exist.  Please select a different unique username.
+UserSession.35=Unexpected database error: {0}
 UserSession.39=Unable to email the invitation: {0}
 UserSession.4=The verification has expired.  Please resend the verification email.  When logging in using your username and password, you will be prompted to resend the verification.
 UserSession.41=Error adding user: {0}
@@ -99,6 +101,7 @@ UserSession.86=Unable to email the for the profile update: {0}
 UserSession.9=Unexpected No Such Algorithm exception completing verification.  Please report this error to the OpenChain group
 UserSession.92=Attempting to reset a password when a reset password email was not sent.
 UserSession.95=Email password reset tokens does not match.  Please re-send the password reset.
+UserSession.108=Verification email has just been sent.  Please check your email {0}.
 # Strings from the Question class.  Less common error messages
 Question.2=Spec version for question was not specified
 Question.3=Question number for question was not specified
@@ -149,3 +152,8 @@ Survey.2=Duplication question number {0}.
 Survey.3=Invalid sub-question {0}.  Number of questions({1}) is less than the minimum number of correct answers ({2}).
 Survey.4=Section name for question is not correct for question {0}.
 Survey.5=Sub question number {0} was not found in the main question list for the survey.
+# Messages for the ReCaptcha class
+ReCaptcha.11=ReCaptcha service returned an error code.  Please notify the OpenChain group at conformance@lists.openchainproject.org.
+ReCaptcha.13=I/O error accessing the ReCaptcha service - please try again later.
+ReCaptcha.15=Unexpected error accessing the ReCaptcha service.  Please notify the OpenChain group at conformance@lists.openchainproject.org.
+ReCaptcha.3=Unexpected URL error accessing the ReCaptcha service.  Please notify the OpenChain group at conformance@lists.openchainproject.org.
