--- a/WebContent/resources/locales/ko/translation.json
+++ b/WebContent/resources/locales/ko/translation.json
@@ -59,6 +59,7 @@
 
   "Please contact":"오류나 문제가 있는 경우 <a class=\"anchor\" href=\"mailto:conformance@lists.openchainproject.org?Subject=OpenChain%20Certification%20Feedback\" target=\"_blank\">OpenChain Support</a>에 문의하십시오.",
   "footer_content":"Copyright 2018 The Linux Foundation. All rights reserved.The Linux Foundation has registered trademarks and uses trademarks. For a list of trademarks of The Linux Foundation, please see our <a class=\"anchor\" href=\"https://www.linuxfoundation.org/trademark-usage\" target=\"_blank\">Trademark Usage</a> page. Linux is a registered trademark of Linus Torvalds. <a class=\"anchor\" href=\"https://www.openchainproject.org/privacy\">Privacy Policy</a> and <a class=\"anchor\" href=\"https://www.openchainproject.org/terms\">Terms of Use</a>",
+  "recaptcha_notice":"Forms on this site are protected by reCAPTCHA and the <a href=\"https://policies.google.com/privacy\" target=\"_new\">Google Privacy Policy</a> and <a href=\"https://policies.google.com/terms\" target=\"_new\">Terms of Service</a> apply.",
   
   "COMMENT_4": "/********TRANSLATIONS FOR THE CONFIRMING PAGE IS GIVEN BELOW********* (Specification) ********************/",
 
