--- a/WebContent/resources/locales/ru/translation.json
+++ b/WebContent/resources/locales/ru/translation.json
@@ -52,6 +52,7 @@
 
   "Please contact":"Пожалуйста, свяжитесь с <a class=\"anchor\" href=\"mailto:conformance@lists.openchainproject.org?Subject=OpenChain%20Certification%20Feedback\" target=\"_blank\"> Поддержка OpenChian</a> сообщать о любых неточностях или проблемах.",
   "footer_content":"Copyright 2018 Фонд Linux. Все права защищены. Linux Foundation зарегистрировал товарные знаки и использует товарные знаки. Список торговых марок The Linux Foundation приведен на нашем <a class=\"anchor\" href=\"https://www.linuxfoundation.org/trademark-usage\" target=\"_blank\">Использование торговой марки</a> стр. Linux является зарегистрированным товарным знаком Линуса Торвальдса. <a class=\"anchor\" href=\"https://www.openchainproject.org/privacy\">политика конфиденциальности</a> а также <a class=\"anchor\" href=\"https://www.openchainproject.org/terms\">Условия эксплуатации</a>",
+  "recaptcha_notice":"Forms on this site are protected by reCAPTCHA and the <a href=\"https://policies.google.com/privacy\" target=\"_new\">Google Privacy Policy</a> and <a href=\"https://policies.google.com/terms\" target=\"_new\">Terms of Service</a> apply.",
   
   "COMMENT_4": "/********TRANSLATIONS FOR THE CONFIRMING PAGE IS GIVEN BELOW********* (Specification) ********************/",
 
